Debut liste parking
Passage à la vue de liste, problème d'affichage du nom du parking
La liste est encore statique, à coupler avec la liste dynamique

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="text_find_button">Trouver</string>
     <string name="text_button_list">Liste</string>
     <string name="text_button_preferences">Préférences</string>
+    <string name="description_image_parking_open">Image parking ouvert</string>
 
 </resources>
