--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">MobiStras</string>
@@ -8,5 +7,7 @@
     <string name="text_button_list">Liste</string>
     <string name="text_button_preferences">Préférences</string>
     <string name="description_image_parking_open">Image parking ouvert</string>
+    <string name="urlLocation">http://carto.strasmap.eu/remote.amf.json/Parking.geometry</string>
+    <string name="urlParking">http://carto.strasmap.eu/remote.amf.json/Parking.status</string>
 
 </resources>
