--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="text_find_button">Trouver</string>
     <string name="text_button_list">Liste</string>
+    <string name="text_button_database">Database</string>
     <string name="text_button_preferences">Préférences</string>
     <string name="description_image_parking_open">Image parking ouvert</string>
     <string name="urlLocation">http://carto.strasmap.eu/remote.amf.json/Parking.geometry</string>
