--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">MobiStras</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="text_find_button">Trouver</string>
-    <string name="text_button_list">Liste</string>
+    <string name="text_find_button">Trouver un parking</string>
+    <string name="text_button_list">Liste des parkings</string>
     <string name="text_button_database">Database</string>
     <string name="text_button_preferences">Préférences</string>
     <string name="description_image_parking_open">Image parking ouvert</string>
@@ -13,4 +13,10 @@
     <string name="text_time">Horaire:</string>
     <string name="text_button_validate_alarm">Valider</string>
     <string name="text_alarm_infos">Programmez une alarme afin de vérifier le nombre de place disponible</string>
+    <string name="text_available_places">Places disponibles:</string>
+    <string name="text_full_places">Total des places</string>
+    <string name="text_navigate_to">Naviguer vers ce parking</string>
+    <string name="content_description_parking_logo">Logo_parking</string>
+    <string name="content_description_logo_map">Logo_map</string>
+    <string name="text_programmed_alarms">Alertes programmées:</string>
 </resources>
