--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="text_programmed_alarms">Alertes programmées:</string>
     <string name="text_detailed_alarms">Alarme programmée:</string>
     <string name="text_detailed_isreccurent">Alarme récurrente</string>
+    <string name="content_description_favorite">favorite_logo</string>
 </resources>
