--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">MobiStras</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Gérer la programmation</string>
     <string name="text_button_preferences">Préférences</string>
     <string name="description_image_parking_open">Image parking ouvert</string>
     <string name="urlLocation">http://carto.strasmap.eu/remote.amf.json/Parking.geometry</string>
@@ -9,7 +8,7 @@
     <string name="text_recurrence">Récurrence:</string>
     <string name="text_time">Horaire:</string>
     <string name="text_button_validate_alarm">Valider</string>
-    <string name="text_alarm_infos">Programmez une alarme afin de vérifier le nombre de place disponible</string>
+    <string name="text_alarm_infos">Programmez une alarme afin de vérifier le nombre de place disponible pour vos favoris</string>
     <string name="text_available_places">Places disponibles:</string>
     <string name="text_full_places">Total des places</string>
     <string name="text_navigate_to">Naviguer vers ce parking</string>
