--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="text_detailed_isreccurent">Alarme récurrente</string>
     <string name="content_description_favorite">favorite_logo</string>
     <string name="text_button_cancel_alarm">Désactiver la vérification</string>
-
+    <string name="alarm_preferences_name">AlarmPreferences</string>
+	<string name="dialog_internet_unavailable">Veuillez vérifier votre connection internet</string>
+	
 </resources>
