--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="text_button_cancel_alarm">Désactiver la vérification</string>
     <string name="alarm_preferences_name">AlarmPreferences</string>
 	<string name="dialog_internet_unavailable">Veuillez vérifier votre connection internet</string>
+	<string name="toast_text_programmed_alarm">Vérification programmée</string>
+	<string name="toast_text_canceled_alarm">Vérification désactivée</string>
 	
 </resources>
