--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,7 @@
 	<string name="dialog_internet_unavailable">Veuillez vérifier votre connection internet</string>
 	<string name="toast_text_programmed_alarm">Vérification programmée</string>
 	<string name="toast_text_canceled_alarm">Vérification désactivée</string>
+	<string name="text_internet_unavailable">Vous n\'avez pas de connection internet, les données ci dessous n\'ont pas été actualisées</string>
+	<string name="content_description_delete">Delete_icon</string>
 	
 </resources>
