--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">StrasAndPark</string>
-    <string name="menu_settings">Gérer la programmation</string>
+    <string name="menu_settings">Programmer la vérification</string>
     <string name="urlLocation">http://carto.strasmap.eu/remote.amf.json/Parking.geometry</string>
     <string name="urlParking">http://carto.strasmap.eu/remote.amf.json/Parking.status</string>
     <string name="text_recurrence">Récurrence:</string>
@@ -10,11 +10,7 @@
     <string name="text_button_validate_alarm">Valider</string>
     <string name="text_alarm_infos">Programmez une alarme afin de vérifier le nombre de place disponible pour vos favoris</string>
     <string name="text_available_places">Places disponibles:</string>
-    <string name="content_description_parking_logo">Logo_parking</string>
-    <string name="content_description_logo_map">Logo_map</string>
-    <string name="description_image_parking_open">Image parking ouvert</string>
-    <string name="text_detailed_isreccurent">Alarme récurrente</string>
-    <string name="content_description_favorite">favorite_logo</string>
+    <string name="text_detailed_isreccurent">Alarme récurrente</string> 
     <string name="text_button_cancel_alarm">Désactiver la vérification</string>
     <string name="alarm_preferences_name">AlarmPreferences</string>
 	<string name="dialog_internet_unavailable">Veuillez vérifier votre connection internet</string>
@@ -22,5 +18,9 @@
 	<string name="toast_text_canceled_alarm">Vérification désactivée</string>
 	<string name="text_internet_unavailable">Vous n\'avez pas de connection internet, les données ci dessous n\'ont pas été actualisées</string>
 	<string name="content_description_delete">Delete_icon</string>
+	<string name="description_image_parking_open">Image parking ouvert</string>
+	<string name="content_description_parking_logo">Logo_parking</string>
+    <string name="content_description_logo_map">Logo_map</string>
+    <string name="content_description_favorite">favorite_logo</string>
 	
 </resources>
